fix tags/folder page overflow

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -46,7 +46,7 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
-  overflow-wrap: anywhere;
+  // overflow-wrap: anywhere;
   hyphens: auto;
 }
 
